Type Conversion, Basic operators, maths, Comparision(taqqoslash), Logical operator

--- a/002.dars/index.html
+++ b/002.dars/index.html
@@ -9,6 +9,9 @@
 <body>
     <ul>
         <li>Type Conversion</li>
+        <li>Basic operators, maths</li>
+        <li>Comparision(taqqoslash)</li>
+        <li>Logical operators</li>
     </ul>
 
     <script src="./app.js"></script>
