--- a/006_dars/index.html
+++ b/006_dars/index.html
@@ -6,6 +6,13 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Object</h1>
     <script src="./app.js"></script>
 </body>
 </html>
+
+
+
+
+
+
